# pCrunch

./: .gitattributes  .gitignore  HISTORY.md  README.MD  README.md  README.rst  batch_processing.ipynb  environment.yml  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml  tests.yml
BatchAnalysis/: Analysis.py  Processing.py  pdTools.py  post_plotting.py  post_process.py  run_DLC_NREL5MW.py  run_FlapGainSweep_BAR.py  run_ParamSweep.py  submit_DLC.sh
HPC_tools/: eagle2local.sh  submit_DLC.sh  submit_FlapSweep.sh
doc/: aeroelastic_output_example.md  crunch_example.md
examples/: aeroelastic_output_example.ipynb  crunch_example.ipynb  deprecated_batch_processing.ipynb  example.ipynb  example_casematrix.py  post_BatchRun.py
pCrunch/: Analysis.py  Processing.py  __init__.py  _version.py  aeroelastic_output.py  analysis.py  crunch.py  fatigue.py  io.py  openfast.py  openfast_readers.py  utility.py
pCrunch/io/: __init__.py  openfast.py  timeseries.py
pCrunch/test/: test_aeroelastic_output.py  test_crunch.py  test_direct_inputs.py  test_example.py  test_fatigue.py  test_parsers.py
pCrunch/test/data/DLC1p1/: DLC1.1_0_NREL5MW_OC3_spar_0.outb  DLC1.1_0_NREL5MW_OC3_spar_1.outb  DLC1.1_0_NREL5MW_OC3_spar_2.outb  DLC1.1_0_NREL5MW_OC3_spar_3.outb  DLC1.1_0_NREL5MW_OC3_spar_4.outb  case_matrix_DLC1.1_0.txt  case_matrix_DLC1.1_0.yaml  case_matrix_combined.txt  case_matrix_combined.yaml
postProcessing/: post_BatchRun.py  post_DLCcomparison.py
runBatch/: run_DLC_NREL5MW.py  run_FlapGainSweep_BAR.py  run_ParamSweep.py
tests/io/: test_parsers.py
